--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -46,3 +46,33 @@ sphinx-markdown-tables = "^0.0.17"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.black]
+line-length = 100
+extend-exclude = '''
+  .git
+  .github
+  .hg
+  .mypy_cache
+  .tox
+  .venv
+  _build
+  buck-out
+  build
+  dist
+  notebooks
+'''
+
+
+[tool.isort]
+profile = "black"
+include_trailing_comma = true
+line_length = 100
+multi_line_output = 3
+use_parentheses = true
+skip = ["__init__.py", ".venv"]
+
+[pytest]
+pythonpath = "src/de_modules"
+ 
